--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
+  - "3.6"
 install:
   - python setup.py install
-  - pip install coveralls
-  - pip install pep8
+  # - pip install coveralls
+  - pip install pycodestyle
 script:
-  - pep8 --max-line-length 100 pyramda
+  - pycodestyle
   - python setup.py nosetests
-after_success:
-  - coveralls
+# after_success:
+  # - coveralls
