--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ python:
   - "3.6"
 install:
   - python setup.py install
-  # - pip install coveralls
+  - pip install coveralls
   - pip install pycodestyle
 script:
   - pycodestyle
   - python setup.py nosetests
-# after_success:
-  # - coveralls
+after_success:
+  - coveralls
