--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
       - name: Install dependencies
+        run: |
           python -m pip install black, flake8, flake8-black
       - name: Black
         run: black --check .
