--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
-          python -m pip install black, flake8, flake8-black
+          python -m pip install black flake8 flake8-black
       - name: Black
         run: black --check .
       - name: Flake8
