--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
           python -m pip install nose2
           pip install .
       - name: Nose
-        run: nose2 -v
+        run: nose2 -C
 
   lint:
     runs-on: ubuntu-latest
